--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TsapkoZh.github.io/my-app",
+  "homepage": "https://TsapkoZh.github.io/fillingForm",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
